Fix wrapping on small screens so it isn't broken-looking

--- a/src/app/machines/views/MachineList/_index.scss
+++ b/src/app/machines/views/MachineList/_index.scss
@@ -141,10 +141,24 @@
     .section-header__buttons {
       display: flex;
       align-items: center;
+      flex-wrap: wrap;
+
+      @media screen and (max-width: ($breakpoint-node-action-menu-group - 1)) {
+        .p-node-action-menu-group, .p-add-hardware-dropdown {
+          display: none;
+        }
+      }
+    
+      @media screen and (min-width: $breakpoint-node-action-menu-group) {
+        .p-action-menu {
+          display: none;
+        }
+      }
 
       .machine-list-controls {
         grid-gap: 0.5rem;
         align-items: center;
+        flex-wrap: wrap;
 
         .p-search-box, .p-form-validation__input, .p-button--link {
           margin-bottom: 0;
@@ -152,18 +166,6 @@
 
         .p-button--link {
           align-self: center;
-        }
-
-        @media screen and (max-width: ($breakpoint-node-action-menu-group - 1)) {
-          .p-node-action-menu-group {
-            display: none;
-          }
-        }
-      
-        @media screen and (min-width: $breakpoint-node-action-menu-group) {
-          .p-action-menu {
-            display: none;
-          }
         }
       }
 
